src/test/deca/context/valid/ClassMathode18.deca
// Description:
//    class cast
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {

}
class B extends A {
	
}

{

	A a;
	B b;
	a = b;
	b = (B)(a);

}