src/test/deca/context/invalid/classextends16.deca
class A{}
class B extends A{
    int a;
    A a;
}
